<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Successful_loginPage">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/download" />

    <TextView
        android:id="@+id/User"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="207dp"
        android:text="@string/parvati_s_binjawadgi"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Quali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/qualification"
        android:textAppearance="@android:style/TextAppearance" />

    <TextView
        android:id="@+id/Fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Quali"
        android:text="@string/facebook"
        android:textAppearance="@android:style/TextAppearance" />

    <TextView
        android:id="@+id/twt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="192dp"
        android:text="@string/twitter"
        android:textAppearance="@android:style/TextAppearance" />

    <TextView
        android:id="@+id/desg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:autoLink="email"
        android:text="@string/designation"
        android:textAppearance="@android:style/TextAppearance.SuggestionHighlight" />
</RelativeLayout>