<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/uname"
        android:layout_width="169dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="78dp"
        android:layout_marginTop="43dp"
        android:text="User Name"
        android:textStyle="bold"
        android:textColor="#E34"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="21dp" />

    <TextView
        android:id="@+id/pwd"
        android:layout_width="188dp"
        android:layout_height="41dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/uname"
        android:layout_marginTop="167dp"
        android:text="@string/password"
        android:textColor="#E34"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="161dp" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="105dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/namee"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="87dp" />

    <EditText
        android:id="@+id/user_pwd"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPassword"

        android:password="true"
        android:text="@string/name"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="232dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="95dp"
        android:layout_marginStart="135dp"
        android:onClick="launchSecondActivity"
        android:password="false"
        android:text="@string/login"
        android:textColor="#EE56"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="388dp" />

</RelativeLayout>